k8s/favorites-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: favorites-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: favorites-service
  template:
    metadata:
      labels:
        app: favorites-service
      annotations:
        traffic.sidecar.istio.io/excludeOutboundPorts: "50051"
    spec:
      serviceAccountName: favorites-service-sa
      containers:
        - name: favorites-service
          image: myrafilia/favorites-service:v2
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          livenessProbe:
            httpGet:
              path: /favorites/health
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 10
