k8s/review-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: review-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: review-service
  template:
    metadata:
      labels:
        app: review-service
      annotations:
        traffic.sidecar.istio.io/excludeOutboundPorts: "50051"
    spec:
      containers:
        - name: review-service
          image: myrafilia/review-service:v2
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          livenessProbe:
            httpGet:
              path: /reviews/health
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 10
