k8s/reviews-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reviews-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reviews-service
  template:
    metadata:
      labels:
        app: reviews-service
    spec:
      containers:
        - name: reviews-service
          image: myrafilia/review-service:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          livenessProbe:
            httpGet:
              path: /reviews/health
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 10
