k8s/series-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: series-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: series-service
  template:
    metadata:
      labels:
        app: series-service
      annotations:
        traffic.sidecar.istio.io/excludeInboundPorts: "50051"  
        traffic.sidecar.istio.io/excludeOutboundPorts: "50051"
    spec:
      serviceAccountName: series-service-sa
      containers:
        - name: series-service
          image: myrafilia/series-service:v5
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
            - containerPort: 50051
