k8s/favorites-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: favorites-service
spec:
  selector:
    app: favorites-service
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
