k8s/reviews-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reviews-service
spec:
  selector:
    app: reviews-service
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
