k8s/series-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: series-service
spec:
  selector:
    app: series-service
  ports:
    - name: http
      protocol: TCP
      port: 8000
      targetPort: 8000
    - name: grpc
      protocol: TCP
      port: 50051
      targetPort: 50051
  type: ClusterIP
