k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: series-ingress
spec:
  rules:
    - host: series.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: series-service
                port:
                  number: 8000

          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
